# lite-edge-cluster-scheduler

./: .agent_config.json  .gitignore  AGENTS.md  CMakeLists.txt  README.md  clean.sh  download_deps.sh
config_files/: agent_services.json  slave_backend.json
example/: sub_req_metrics_example.csv
script/: clean_workspace.sh  run_load_sim.py  simulate_yolo_requests.py
src/: CMakeCache.txt
src/custom_struct/device_struct/: CMakeLists.txt  device.cpp  device.h
src/docker_client/: CMakeLists.txt
src/docker_scheduler_agent/: CMakeLists.txt  MachineInfoCollectorBase.cpp  MachineInfoCollectorBase.h  main.cpp
src/gateway/: HttpServer.cpp  HttpServer.h  SocketServer.cpp  config.h  main.cpp
src/modules/: README.md
src/modules/client/: readme.md  req_send.py  rst_recv.py  send_pic.py
src/modules/master/: README.md  pic_manager.py  task_manager.py
src/modules/slave/: recv_server.py  rst_send.py
src/modules/slave/task_dealer/: README.md
src/modules/slave/task_dealer/docker/segmentation/: Dockerfile  requirements.txt  segment.py
src/modules/slave/task_dealer/executor/yolov5-ascend/: QUICK_START.md
src/modules/slave/yolov5-ascend/: USAGE.md  detect_yolov5_ascend.py
src/modules/task_producer/: 1.py  rst_recv.py  send_pic.py
src/scheduler/: CMakeLists.txt  main.cpp  scheduler.cpp  scheduler.h
src/z3_test/: CMakeLists.txt  z3Test.cpp  z3_schedule.cpp
startup/: master_start.sh
tests/docker_client/: docker_client_test.cpp
tests/predict/: CMakeLists.txt  predict.cpp
tests/scheduler/: CMakeLists.txt  scheduler_test.cpp
tests/z3_mock_test/: z3_mock_test.cpp
